# pointcloud-tools

./: .gitignore  CMakeLists.txt
internal/: openni2_device_util.hpp  openni2_frame_listener.hpp  video_frame_converter.hpp
internal/pctools/: ni_device.hpp  utils.hpp
scripts/: extract_from_oni_files  match_timestamp.rb  oni_extractor.py  rename_abs_time.rb  validate_timegap.rb
scripts/pctools/: ni_device.py
tools/: concatenate.cpp  icp.cpp  octree_change_detection.cpp  oni_extractor.cpp  openni_change_viewer.cpp  region_growing_rgb_segmentation.cpp  region_growing_segmentation.cpp  remove_nan_points.cpp  statistical_outlier_removal.cpp
